# androidshine

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  androidshine.desktop  androidshine.notifyrc  daemon.cpp  daemon.h  device.cpp  device.h  main.cpp  mainwindow.cpp  mainwindow.h  udpwireless.cpp  udpwireless.h
src/transport/: adb.cpp  adb.h
